# Cpp_Project_Environment

./: C-CPP_Project_Env.code-workspace  Create_C++_Project.code-workspace  Makefile  README.md  run.sh  test.sh
doc/: TODO.md  notes.txt
inc/: inc.h
pkg/: C-Cpp_pkg.cmd  C-Cpp_pkg.sh  CMakeLists.txt  install_C_Package.sh
project/: run.sh
project/inc/: inc.h  inc.hpp
project/src/: lib.cpp  main.cpp
src/: lib.cpp  main.cpp
